@@ -1,3 +1,10 @@
+2011-03-25
+	* src/stash.c(_pam_krb5_stash_external_read): add a flag to track
+	whether or not our creds were externally obtained, and set it
+	correctly
+	* src/session.c(pam_sm_open_session): only create a v5 ccache if
+	the creds we have weren't externally obtained (#690832)
+
 2011-03-03
 	* src/v5.c(v5_change_password): prefer krb5_change_password() over
 	krb5_set_password()
